--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="moduleHtml/FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="moduleHtml/FAY_OOB_Odm.html" data-transition="slide" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
