--- a/moduleHtml/FPY_OOB_Odm.html
+++ b/moduleHtml/FPY_OOB_Odm.html
@@ -31,8 +31,8 @@
 <div data-role="page" data-quicklinks="true" class="bg_blue2 index-page">
     <header class="headerWrap">
 		<h2 class="lenovoTitle chartsTab"><span class="chartsTab_l cur">LENOVO</span><span class="chartsTab_r">THINK</span></h2>
-		<a href="User_Center.html" data-transition="slide" class="jqm-navmenu-link ui-btn-left myico-user"></a>
-		<a href="FPY_Search.html" data-transition="slide" class="jqm-search-link ui-btn-right myico-search"></a>
+		<a href="../index.html" data-rel="back" class="jqm-navmenu-link ui-btn-left myico-user"></a>
+		<a href="#" class="jqm-search-link ui-btn-right myico-search"></a>
     </header>
 	<!-- /header -->
     <div role="main" class="ui-content">
