--- a/moduleHtml/Qstop_Search.html
+++ b/moduleHtml/Qstop_Search.html
@@ -303,12 +303,12 @@
 <script type="text/javascript">
 	$(function() {
 		$(".OnsYes").click(function(){
-			$(this).css('display','none');
-			$(".OnsNo").css('display','inline-block');
+			$(this).hide();
+			$(".OnsNo").show();
 		});
 		$(".OnsNo").click(function(){
-			$(this).css('display','none');
-			$(".OnsYes").css('display','inline-block');
+			$(this).hide();
+			$(".OnsYes").show();
 		});
 	});
 </script>
