--- a/index.html
+++ b/index.html
@@ -34,13 +34,17 @@
 <div data-role="page" data-quicklinks="true" class="bg_color_01 index-page">
     <header class="headerWrap">
         <!-- <h2 class="lenovoTitle"><a href="#" title="Lenovo" class="lenovoLogo"></a></h2> -->
-		<h2 class="lenovoTitle">EC</h2>
+		<h2 class="lenovoTitle">Index</h2>
 		<a href="moduleHtml/User_Center.html" data-transition="slide" class="jqm-navmenu-link ui-btn-left myico-user"></a>
-		<a href="#" class="jqm-search-link ui-btn-right myico-search"></a>
+<!--		<a href="#" class="jqm-search-link ui-btn-right myico-search"></a>-->
     </header>
 	<!-- /header -->
     
 	<div role="main" class="ui-content">
+	    <div style="font-size:20px; color:#fff; text-align:center; margin-top:180px;">
+	        请点击各个位置菜单查看内页
+	    </div>
+<!--
         <div class="mainWrap" style="height:1000px;">
         <div class="form_con">
             <span class="form_checkbox_wrap">
@@ -90,15 +94,16 @@
             </select>
         </div>
         </div>
+-->
 	</div><!-- /content -->
     
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="moduleHtml/Qstop_Odm.html" data-transition="slide" class="navList nav01">
+		    <a href="moduleHtml/Qstop_Charts.html" data-transition="slide" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="moduleHtml/FAY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="moduleHtml/FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
