--- a/moduleHtml/Audit_SearchResult.html
+++ b/moduleHtml/Audit_SearchResult.html
@@ -23,8 +23,6 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/Qstop.css">
-	<link rel="stylesheet" href="../css/main.css">
     <style>
         .ui_fai_pie,
         .ui_fai_bar{
@@ -38,7 +36,7 @@
     </style>
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_purple01 aduit-chart">
+<div data-role="page" data-quicklinks="true" class="bg_purple01 audit_search_chart" data-page-name="audit_search">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">Audit Search Result</h2>
 		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
@@ -60,7 +58,7 @@
 			</div>		
 		</div>
 		<div class="searchText"><i class="searR myico-arrowT1"></i></div>
-		<div id="chart_audit_result" class="Audit_idmCon audit_search" style="width:100%;height:309px;">
+		<div id="chart_audit_result" class="Audit_idmCon" style="width:100%;height:309px;">
         	
         </div>
 		<div class="stop_odm">
