--- a/moduleHtml/EC.html
+++ b/moduleHtml/EC.html
@@ -123,11 +123,11 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="Qstop_Odm.html" data-transition="slide" class="navList nav01">
+		    <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FAY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
