--- a/moduleHtml/FAI.html
+++ b/moduleHtml/FAI.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Transitions - jQuery Mobile Demos</title>
     <link rel="shortcut icon" href="../favicon.ico">
-    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700"> -->
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/main.css">
-    
 </head>
 <body>
 <div data-role="page" data-quicklinks="true" class="bg_brown01 fai-chart" data-page-name="fai_home">
@@ -32,11 +29,11 @@
     <!-- footer -->
     <div data-role="footer" class="footerWrap">
         <div class="navWrap">
-            <a href="Qstop_Odm.html" data-transition="slide" class="navList nav01">
+            <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
                 <i class="myico-nav01"></i>
                 <p>Q-STOP</p>
             </a>
-            <a href="FAY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+            <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
                 <i class="myico-nav02"></i>
                 <p>FPY/OOB</p>
             </a>
