--- a/moduleHtml/FAI_SearchResult-2.html
+++ b/moduleHtml/FAI_SearchResult-2.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/Qstop.css">
     <style>
         .ui_fai_pie,
         .ui_fai_bar{
@@ -40,7 +39,7 @@
 <div data-role="page" data-quicklinks="true" class="bg_org js-chart">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FAI Search Result</h2>
-		<a href="../index.html" data-rel="back" class="perLink ui-btn-left myico-arrowT1"></a>
+		<a href="../index.html" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
 	</header>
 	<!-- /header -->
     <div role="main" class="ui-content noFooter">
