--- a/moduleHtml/FPY_OOBSearchResult-3.html
+++ b/moduleHtml/FPY_OOBSearchResult-3.html
@@ -23,10 +23,9 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="../css/style.css">
-	<link rel="stylesheet" href="../css/Qstop.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" data-dom-cache="true" class="bg_blue2 js-chart">
+<div data-role="page" data-quicklinks="true" data-dom-cache="true" class="bg_blue2 js-chart chart_fpy_oob_s1" data-page-name="fpy_oob_s1">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FPY/OOB Search Result</h2>
 		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
@@ -52,7 +51,7 @@
 			</div>			
 		</div>
 		<div class="searchText"><i class="searR myico-arrowT1"></i></div>
-		<div class="Fpy_idmCon fpy_oob_result3">
+		<div class="Fpy_idmCon">
             <div id="chart_fpy_timeLine" style="width:100%;height:410px;"></div>
 		</div>
 		<div class="eachBlockTitle_dt">
