--- a/moduleHtml/FPY_OOB_Odm.html
+++ b/moduleHtml/FPY_OOB_Odm.html
@@ -23,16 +23,13 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/Qstop.css">
-    <script src="../js/jquery/jquery-2.1.1.min.js" data-main="../js/jquery/jquery-2.1.1.min.js" ></script>
-    <script src="../js/Qstop.js" data-main="../js/Qstop.js" ></script>
 </head>
 <body>
 <div data-role="page" data-quicklinks="true" class="bg_blue2 index-page">
     <header class="headerWrap">
 		<h2 class="lenovoTitle chartsTab"><span class="chartsTab_l cur">LENOVO</span><span class="chartsTab_r">THINK</span></h2>
-		<a href="../index.html" data-rel="back" class="jqm-navmenu-link ui-btn-left myico-user"></a>
-		<a href="#" class="jqm-search-link ui-btn-right myico-search"></a>
+		<a href="User_Center.html" data-transition="slide" class="jqm-navmenu-link ui-btn-left myico-user"></a>
+		<a href="FPY_Search.html" data-transition="slide" class="jqm-search-link ui-btn-right myico-search"></a>
     </header>
 	<!-- /header -->
     <div role="main" class="ui-content">
@@ -218,7 +215,7 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="Qstop_Odm.html" data-transition="slide" class="navList nav01">
+		    <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
