--- a/moduleHtml/Qstop_SearchResult.html
+++ b/moduleHtml/Qstop_SearchResult.html
@@ -23,10 +23,9 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/Qstop.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_blue js-chart">
+<div data-role="page" data-quicklinks="true" class="bg_blue js-chart chart_qstop_result" data-page-name="qstop_result">
      <header class="headerWrap">
 		<h2 class="lenovoTitle">Q-Stop Search Result</h2>
 		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
@@ -68,7 +67,7 @@
 			</div>	
 		</div>
         <div class="searchText"><i class="searR myico-arrowT1"></i></div>
-        <div class="qstop_result">      
+        <div class="Fpy_idmCon">      
             <div id="chart_qstop_bar" class="ui_qstop_bar"></div>
         </div>
         <div class="stop_odm">
