--- a/moduleHtml/Audit.html
+++ b/moduleHtml/Audit.html
@@ -5,12 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Transitions - jQuery Mobile Demos</title>
 	<link rel="shortcut icon" href="../favicon.ico">
-    <!-- <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,700"> -->
 	<link rel="stylesheet" href="../css/reset.css">
 	<link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
 	<link rel="stylesheet" href="../css/style.css">
-	<link rel="stylesheet" href="../css/main.css">
-	
 </head>
 <body>
 <div data-role="page" data-quicklinks="true" class="bg_blue01 aduit-chart" data-page-name="aduit">
@@ -23,18 +20,33 @@
     
 	<div role="main" class="ui-content">
        <div class="mainWrap basefont ui_audit">
-           <div class="eb_audit_inner"></div>
+           <div class="eb_audit_inner">
+               <div class="eb_audit_items blue_0">
+                   <a href="Audit_ODM.html" data-transition="slide">
+                       <div class="vam clearfix">
+                           <div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_1.png);"></div>
+                           <div class="eai_score">99</div>
+                           <div class="eai_comname">wistron_KS</div>
+                           <div class="eai_state up"></div>
+                        </div>
+                    </a>
+                </div>
+                <div class="eb_audit_items blue_1">
+                    <a href="Audit_ODM.html" data-transition="slide">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_1.png);"></div>		<div class="eai_score">95</div>		<div class="eai_comname">wistron_ZS</div>		<div class="eai_state up"></div>	</div>	</a></div>
+                <div class="eb_audit_items yellow_0"><a href="Audit_ODM.html" data-transition="slide">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_2.png);"></div>		<div class="eai_score">94</div>		<div class="eai_comname">Compal</div>		<div class="eai_state down"></div>	</div>	</a></div>
+                <div class="eb_audit_items yellow_1"><a href="Audit_ODM.html" data-transition="slide">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_3.png);"></div>		<div class="eai_score">85</div>		<div class="eai_comname">Quanta</div>		<div class="eai_state"></div>	</div>	</a></div>
+                <div class="eb_audit_items yellow_2"><a href="Audit_ODM.html" data-transition="slide">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_4.png);"></div>		<div class="eai_score">90</div>		<div class="eai_comname">Bitand</div>		<div class="eai_state up"></div>	</div>	</a></div><div class="eb_audit_items red_0"><a href="Audit_ODM.html" data-transition="slide">	<div class="vam clearfix">		<div class="eai_logo" style="background-image: url(http://192.168.1.156/Lenovo/webapp/images/sample/eai_logo_5.png);"></div>		<div class="eai_score">50</div>		<div class="eai_comname">LCFC</div>		<div class="eai_state down"></div>	</div>	</a></div></div>
        </div>
 	</div><!-- /content -->
     
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="Qstop_Odm.html" data-transition="slide" class="navList nav01">
+		    <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FAY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
