--- a/moduleHtml/FAI_Odm.html
+++ b/moduleHtml/FAI_Odm.html
@@ -19,11 +19,9 @@
 ================================================== -->
     <!-- !!!注意 minimal-ui 是IOS7.1的新属性，最小化浏览器UI -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no, minimal-ui">
-
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/Qstop.css">
     <style>
         .ui_fai_pie,
         .ui_fai_bar{
@@ -37,7 +35,7 @@
     </style>
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_org js-chart">
+<div data-role="page" data-quicklinks="true" class="bg_org js-chart  fai_chart" data-page-name="fai_odm">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FAI ODM</h2>
 		<a href="User_Center.html" data-transition="slide" class="jqm-navmenu-link ui-btn-left myico-user"></a>
@@ -47,7 +45,7 @@
     <div role="main" class="ui-content">
         <div class="Fai_idmCon">
         	<h3 class="Fai_idmTitle">FAI Breakdown</h3>
-            <div id="ui_faiodm_pie" class="ui_fai_pie fai_odm" style="width:100%;height:155px;"></div>           
+            <div id="ui_faiodm_pie" class="ui_fai_pie" style="width:100%;height:155px;"></div>           
             <h3 class="Fai_idmTitle">One Month Summary</h3>
             <div id="ui_faiodm_bar" class="ui_fai_bar"></div>
             <div class="stop_odm">
@@ -170,11 +168,11 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="Qstop_Odm.html" data-transition="slide" class="navList nav01">
+		    <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FAY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
