--- a/moduleHtml/FPY_OOBSearchResult-4.html
+++ b/moduleHtml/FPY_OOBSearchResult-4.html
@@ -23,10 +23,9 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="../css/style.css">
-	<link rel="stylesheet" href="../css/Qstop.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" data-dom-cache="true" class="bg_blue2 js-chart">
+<div data-role="page" data-quicklinks="true" data-dom-cache="true" class="bg_blue2 js-chart chart_fpy_oob_s4" data-page-name="fpy_oob_s4">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FPY/OOB Search Result</h2>
 		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
@@ -81,7 +80,7 @@
 				<span class="ebtd"><i class="myico-arrow_up"></i><em>97</em><b>%OOB</b></span>
 			</h3>
 		</div>
-		<div class="Fpy_idmCon fpy_oob_result4">
+		<div class="Fpy_idmCon">
 			<div id="chart_fpy_Line" style="width:100%;height:320px;"></div>
 		</div>
 		<div class="stop_odm">
