--- a/moduleHtml/Qstop_Charts.html
+++ b/moduleHtml/Qstop_Charts.html
@@ -19,13 +19,9 @@
 ================================================== -->
     <!-- !!!注意 minimal-ui 是IOS7.1的新属性，最小化浏览器UI -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=no, minimal-ui">
-
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/Qstop.css">
-    <script src="../js/jquery/jquery-2.1.1.min.js" data-main="../js/jquery/jquery-2.1.1.min.js" ></script>
-    <script src="../js/Qstop.js" data-main="../js/Qstop.js" ></script>
 </head>
 <body>
 <div data-role="page" data-quicklinks="true" class="bg_blue js-chart">
@@ -45,11 +41,11 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="Qstop_Odm.html" data-transition="slide" class="navList nav01">
+		    <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FAY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
