--- a/moduleHtml/Qstop_Odm.html
+++ b/moduleHtml/Qstop_Odm.html
@@ -23,7 +23,6 @@
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/jquery.mobile-1.4.2.min.css">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/Qstop.css">
 </head>
 <body>
 <div data-role="page" data-quicklinks="true" class="bg_blue js-chart">
@@ -145,11 +144,11 @@
 	<!-- footer -->
 	<div data-role="footer" class="footerWrap">
 		<div class="navWrap">
-		    <a href="Qstop_Odm.html" data-transition="slide" class="navList nav01">
+		    <a href="Qstop_Charts.html" data-transition="slide" class="navList nav01">
 		        <i class="myico-nav01"></i>
 		        <p>Q-STOP</p>
 		    </a>
-		    <a href="FAY_OOB_Odm.html" data-transition="slide" class="navList nav02">
+		    <a href="FPY_OOB_Odm.html" data-transition="slide" class="navList nav02">
 		        <i class="myico-nav02"></i>
 		        <p>FPY/OOB</p>
 		    </a>
