--- a/moduleHtml/Audit_ODM.html
+++ b/moduleHtml/Audit_ODM.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_purple01 aduit-chart" data-page-name="audit">
+<div data-role="page" data-quicklinks="true" class="bg_purple01 chart_audit_odm" data-page-name="audit_odm">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">wistron_ZS</h2>
 		<a href="javascript:void(0)" data-rel="back" class="jqm-navmenu-link ui-btn-left headico myico-arrowL"></a>
