--- a/moduleHtml/FAI_Odm.html
+++ b/moduleHtml/FAI_Odm.html
@@ -35,7 +35,7 @@
     </style>
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_org js-chart  fai_chart" data-page-name="fai_odm">
+<div data-role="page" data-quicklinks="true" class="bg_org js-chart  fai_chart chart_fai_odm"  data-page-name="fai_odm">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FAI ODM</h2>
 		<a href="User_Center.html" data-transition="slide" class="jqm-navmenu-link ui-btn-left myico-user"></a>
