--- a/moduleHtml/FPY_OOB_Odm.html
+++ b/moduleHtml/FPY_OOB_Odm.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_blue2 index-page">
+<div data-role="page" data-quicklinks="true" class="bg_blue2 index-page fpy_ood_odm" data-page-name="fpy_ood_odm">
     <header class="headerWrap">
 		<h2 class="lenovoTitle chartsTab"><span class="chartsTab_l cur">LENOVO</span><span class="chartsTab_r">THINK</span></h2>
 		<a href="User_Center.html" data-transition="slide" class="jqm-navmenu-link ui-btn-left myico-user"></a>
@@ -34,7 +34,7 @@
 	<!-- /header -->
     <div role="main" class="ui-content">
         <div class="Fai_idmCon chartsBox">
-            <div>
+            <div class="Fai_idmBox">
             	<ul class="chartsIconTab LenovoIconTab">
                 	<li class="cur"><span class="myico-pc01"></span></li>
                     <li><span class="myico-pc02"></span></li>
@@ -43,7 +43,7 @@
                 </ul>
                 <div class="LenovoIconBox">
                 	<div>
-                        <div>图表</div>
+                        <div id="fpy_ood_line01" style="width:100%; height:500px; margin-bottom:20px;"></div>
                         <div class="stop_odm">
                             <div class="stopTab">
                                 <table cellpadding="0" cellspacing="0" border="0" width="100%">
@@ -164,7 +164,7 @@
                     <div class="chartHide">或者是图表或者是内容，不知道4</div>
                 </div>
              </div>
-             <div class="chartHide">
+             <div class="chartHide Fai_idmBox">
              	<ul class="chartsIconTab ThinkTab">
                 	<li class="cur"><span class="myico-pc01"></span></li>
                     <li><span class="myico-pc02"></span></li>
@@ -202,8 +202,8 @@
                                 <span class="ebtd"><i class="myico-arrow_up"></i><em>97</em><b>%OOB</b></span>
                             </h3>
                         </div>
-                    图表展示
                 	</div>
+                	<div id="fpy_ood_line02" style="width:100%; height:500px;"></div>
                     <div class="chartHide">不知道长什么样2</div>
                     <div class="chartHide">不知道长什么样3</div>
                     <div class="chartHide">不知道长什么样4</div>
