--- a/moduleHtml/FPY_Search.html
+++ b/moduleHtml/FPY_Search.html
@@ -33,11 +33,11 @@
 	<!-- /header -->		
 	<div role="main" class="ui-content noFooter">
 	    <div class="searchTabTag">
-	        <a href="javascript:void(0)" class="tabTag">Q-Stop <i class="tag_down_ico"></i></a>
-	        <a href="javascript:void(0)" class="tabTag cur">FPY/OOB <i class="tag_down_ico"></i></a>
-	        <a href="javascript:void(0)" class="tabTag">AUdit <i class="tag_down_ico"></i></a>
-	        <a href="javascript:void(0)" class="tabTag">FAI <i class="tag_down_ico"></i></a>
-	        <a href="javascript:void(0)" class="tabTag">EC <i class="tag_down_ico"></i></a>
+	        <a href="Qstop_Search.html" data-transition="slide" class="tabTag">Q-Stop <i class="tag_down_ico"></i></a>
+	        <a href="FPY_Search.html" data-transition="slide" class="tabTag cur">FPY/OOB <i class="tag_down_ico"></i></a>
+	        <a href="Audit_Search.html" data-transition="slide" class="tabTag">AUdit <i class="tag_down_ico"></i></a>
+	        <a href="FAI_Search.html" data-transition="slide" class="tabTag">FAI <i class="tag_down_ico"></i></a>
+	        <a href="EC_Search.html" data-transition="slide" class="tabTag">EC <i class="tag_down_ico"></i></a>
 	    </div>
 	    <div class="searchTabCon">
 	        <div class="timeWrap">
@@ -174,7 +174,7 @@
 	        </div>	
 			<h2 class="selectConTitle">
 	            ODM
-	            <a href="javascript:void(0)" class="selectedSure sure">OK</a>
+	            <a href="javascript:void(0)" class="selectedSure">OK</a>
 	        </h2>
 	        <div class="selectConList selTab-table">
                 <div class="selTab-th">
