--- a/moduleHtml/User_Center.html
+++ b/moduleHtml/User_Center.html
@@ -43,7 +43,8 @@
 					<a href="javascript:void(0)" class="btn_href"><i class="myico-email"></i>Email</a>
 					<a href="javascript:void(0)" class="btn_href"><i class="myico-edit"></i>Bulletin board</a>
 				</div>
-				<input type="button" class="form_btn form_btn_red" value="LOG OUT">
+				<a href="javascript:void(0)" class="form_btn form_btn_red">LOG OUT</a>
+<!--				<input type="button" class="form_btn form_btn_red" value="LOG OUT">-->
 			</div>
 		</div>
 	</div>
