--- a/moduleHtml/User_Information.html
+++ b/moduleHtml/User_Information.html
@@ -49,7 +49,7 @@
 				<dl class="infoList">
 					<dt class="infoTit infosex">Sex</dt>
 					<dd>
-                    	<span class="form_radio_wrap"><input type="radio" id="radio01" name="sex" /><label for="radio01" class="form_radio"><span class="myico-women"></span></label></span>
+                    	<span class="form_radio_wrap"><input type="radio" id="radio01" name="sex" checked /><label for="radio01" class="form_radio"><span class="myico-women"></span></label></span>
                         <span class="form_radio_wrap"><input type="radio" id="radio02" name="sex" /><label for="radio02" class="form_radio"><span class="myico-men"></span></label></span>
 					</dd>					
 				</dl>
