--- a/moduleHtml/User_Password.html
+++ b/moduleHtml/User_Password.html
@@ -37,7 +37,7 @@
 				<dl class="infoList">
 					<dt class="infoTit">Original password</dt>
 					<dd>
-						<input type="text" class="form_txt_style">
+						<input type="password" class="form_txt_style">
 						<p class="infoTips">6-16 digit password from the half-width characters (letters,numbers,symbols),with case-sensitive</p>
 					</dd>					
 				</dl>
