--- a/moduleHtml/FAI_SearchResult-1.html
+++ b/moduleHtml/FAI_SearchResult-1.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body>
-<div data-role="page" data-quicklinks="true" class="bg_org js-chart">
+<div data-role="page" data-quicklinks="true" class="bg_org js-chart chart_fai_odm"   data-page-name="fai_odm">
     <header class="headerWrap">
 		<h2 class="lenovoTitle">FAI Search Result</h2>
 		<a href="javascript:void(0)" data-rel="back" class="perLink ui-btn-left myico-arrowL"></a>
